34 create system to disconnect from admin

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -15,6 +15,9 @@ security:
         main:
             anonymous: ~
             http_basic: ~
+            logout:
+                path:   the_logout
+                target: accueil
 
     access_control:
          - { path: ^/admin, roles: ROLE_ADMIN }
